[gd_scene load_steps=8 format=2]

[ext_resource path="res://Script/Enemies/Enemy_7.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Enemies/enemy_7-1.png.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Enemies/enemy_7-2.png (1).png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 1.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "furious",
"speed": 1.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.37326, 9.68553 )

[sub_resource type="Animation" id=3]
resource_name = "enemy_7_FOV_Blow"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1.2, 1.2 ), Vector2( 1.3, 1.3 ), Vector2( 1.4, 1.4 ), Vector2( 1.5, 1.5 ), Vector2( 1.4, 1.4 ), Vector2( 1.3, 1.3 ), Vector2( 1.2, 1.2 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 42.5492

[node name="Enemy_7" type="StaticBody2D"]
collision_layer = 8
script = ExtResource( 1 )

[node name="Enemy_7_AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "furious"

[node name="Enemy_7_Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Enemy_7_FOV_Blow" type="AnimationPlayer" parent="."]
anims/enemy_7_FOV_Blow = SubResource( 3 )

[node name="Enemy_7_FOV" type="Area2D" parent="."]
collision_layer = 129

[node name="Enemy_7_FOV_Area" type="CollisionShape2D" parent="Enemy_7_FOV"]
visible = false
shape = SubResource( 4 )

[node name="Enemy_7_Notifier" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, 0.37473 )
scale = Vector2( 1, 1.1424 )
[connection signal="body_entered" from="Enemy_7_FOV" to="." method="_on_Enemy_7_FOV_body_entered"]
[connection signal="body_exited" from="Enemy_7_FOV" to="." method="_on_Enemy_7_FOV_body_exited"]
